# keradb

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
benches/: benchmarks.rs  keradb_vs_sqlite.rs
src/: error.rs  ffi.rs  lib.rs  main.rs  types.rs
src/cli/: mod.rs  repl.rs  system_db.rs
src/cli/tui/: app.rs  events.rs  mod.rs  ui.rs
src/execution/: executor.rs  index.rs  mod.rs
src/storage/: buffer.rs  mod.rs  pager.rs  serializer.rs
src/vector/: compression.rs  distance.rs  embedding.rs  hnsw.rs  mod.rs  search.rs  types.rs
