[package]
name = "keradb"
version = "0.1.0"
edition = "2021"
authors = ["KeraDB Contributors"]
description = "A lightweight, embedded NoSQL document database written in Rust"
license = "MIT"
repository = "https://github.com/yourusername/keradb"
homepage = "https://github.com/yourusername/keradb"
documentation = "https://docs.rs/keradb"
readme = "README.md"
keywords = ["database", "nosql", "embedded", "document", "storage"]
categories = ["database-implementations", "command-line-utilities"]

[[bin]]
name = "keradb"
path = "src/main.rs"

[lib]
name = "keradb"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Storage & I/O
memmap2 = "0.9"
parking_lot = "0.12"

# Data structures
dashmap = "5.5"

# CLI
clap = { version = "4.4", features = ["derive"] }
rustyline = "13.0"

# TUI (Terminal User Interface)
ratatui = "0.29"
crossterm = "0.28"
tui-textarea = "0.7"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
crc32fast = "1.3"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[[bench]]
name = "benchmarks"
harness = false
